--- a/ECommerceWebsite/src/main/webapp/WEB-INF/web.xml
+++ b/ECommerceWebsite/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,18 @@
   	<description></description>
   	<servlet-class>com.ecommercewebsite.controller.RegisterCtl</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>LoginCtl</servlet-name>
+  	<display-name>LoginCtl</display-name>
+  	<description></description>
+  	<servlet-class>com.ecommercewebsite.controller.LoginCtl</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>RegisterCtl</servlet-name>
   	<url-pattern>/RegisterCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>LoginCtl</servlet-name>
+  	<url-pattern>/LoginCtl</url-pattern>
   </servlet-mapping>
 </web-app>
