--- a/ECommerceWebsite/src/main/webapp/WEB-INF/web.xml
+++ b/ECommerceWebsite/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,12 @@
   	<description></description>
   	<servlet-class>com.ecommercewebsite.controller.LogoutCtl</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>ProductOperationCtl</servlet-name>
+  	<display-name>ProductOperationCtl</display-name>
+  	<description></description>
+  	<servlet-class>com.ecommercewebsite.controller.ProductOperationCtl</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>RegisterCtl</servlet-name>
   	<url-pattern>/RegisterCtl</url-pattern>
@@ -33,5 +39,9 @@
   <servlet-mapping>
   	<servlet-name>LogoutCtl</servlet-name>
   	<url-pattern>/LogoutCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ProductOperationCtl</servlet-name>
+  	<url-pattern>/ProductOperationCtl</url-pattern>
   </servlet-mapping>
 </web-app>
