--- a/ECommerceWebsite/src/main/webapp/WEB-INF/web.xml
+++ b/ECommerceWebsite/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,12 @@
   	<description></description>
   	<servlet-class>com.ecommercewebsite.controller.ContactUserCtl</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>UpdateAdminPasswordCtl</servlet-name>
+  	<display-name>UpdateAdminPasswordCtl</display-name>
+  	<description></description>
+  	<servlet-class>com.ecommercewebsite.controller.UpdateAdminPasswordCtl</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>RegisterCtl</servlet-name>
   	<url-pattern>/RegisterCtl</url-pattern>
@@ -53,5 +59,9 @@
   <servlet-mapping>
   	<servlet-name>ContactUserCtl</servlet-name>
   	<url-pattern>/ContactUserCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>UpdateAdminPasswordCtl</servlet-name>
+  	<url-pattern>/UpdateAdminPasswordCtl</url-pattern>
   </servlet-mapping>
 </web-app>
