--- a/ECommerceWebsite/src/main/webapp/WEB-INF/web.xml
+++ b/ECommerceWebsite/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,12 @@
   	<description></description>
   	<servlet-class>com.ecommercewebsite.controller.UpdateAdminPasswordCtl</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>CheckoutOrderedCtl</servlet-name>
+  	<display-name>CheckoutOrderedCtl</display-name>
+  	<description></description>
+  	<servlet-class>com.ecommercewebsite.controller.CheckoutOrderedCtl</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>RegisterCtl</servlet-name>
   	<url-pattern>/RegisterCtl</url-pattern>
@@ -63,5 +69,9 @@
   <servlet-mapping>
   	<servlet-name>UpdateAdminPasswordCtl</servlet-name>
   	<url-pattern>/UpdateAdminPasswordCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>CheckoutOrderedCtl</servlet-name>
+  	<url-pattern>/CheckoutOrderedCtl</url-pattern>
   </servlet-mapping>
 </web-app>
